--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.5.1",
+    "@types/dompurify": "^3.0.5",
     "axios": "^1.13.2",
+    "dompurify": "^3.3.1",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
